@@ -1,4 +1,10 @@
-$Id: CHANGES,v 1.47 2000/03/02 11:41:29 stelian Exp $
+$Id: CHANGES,v 1.48 2000/03/02 13:33:00 stelian Exp $
+
+Changes between versions 0.4b15 and 0.4b16 (released ?????????????)
+===================================================================
+
+1.	Fixed some several duplicate 'DUMP: DUMP:' in the
+	output of dump.
 
 Changes between versions 0.4b14 and 0.4b15 (released March 2, 2000)
 ===================================================================
